[package]
name = "types-prost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
types = { path = "../types" }

[build-dependencies]
prost-build = "0.11.9"
proto3-codegen = { path = "../../proto3-codegen" }
types = { path = "../types" }
